--- a/back4/package.json
+++ b/back4/package.json
@@ -18,6 +18,8 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
-    "passport": "^0.4.1"
+    "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "redis": "^3.0.2"
   }
 }
